Changes to files that were updated via pre-commit

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -31,9 +31,13 @@
     "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (submit_and_download,\n",
-    "                       remove_results_files, print_error, print_success,\n",
-    "                       compare_data)"
+    "from utilities import (\n",
+    "    submit_and_download,\n",
+    "    remove_results_files,\n",
+    "    print_error,\n",
+    "    print_success,\n",
+    "    compare_data,\n",
+    ")"
    ]
   },
   {
@@ -87,10 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "host_environment = {'http://localhost:3000': Environment.LOCAL,\n",
-    "                    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
-    "                    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
-    "                    'https://harmony.earthdata.nasa.gov': Environment.PROD}\n",
+    "host_environment = {\n",
+    "    'http://localhost:3000': Environment.LOCAL,\n",
+    "    'https://harmony.sit.earthdata.nasa.gov': Environment.SIT,\n",
+    "    'https://harmony.uat.earthdata.nasa.gov': Environment.UAT,\n",
+    "    'https://harmony.earthdata.nasa.gov': Environment.PROD,\n",
+    "}\n",
     "\n",
     "\n",
     "harmony_environment = host_environment.get(harmony_host_url)\n",
@@ -116,13 +122,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod02hkm_non_production_info = {'collection' : Collection(id='C1260442414-LAADSCDUAT'),\n",
-    "                               'granule_id' : 'G1261680941-LAADSCDUAT',\n",
-    "                               'variable' : ['Band_250M']}\n",
+    "mod02hkm_non_production_info = {\n",
+    "    'collection': Collection(id='C1260442414-LAADSCDUAT'),\n",
+    "    'granule_id': 'G1261680941-LAADSCDUAT',\n",
+    "    'variable': ['Band_250M'],\n",
+    "}\n",
     "\n",
     "file_indicators = {'MOD02HKM': 'MOD02HKM.A2023309.2305.061.2023310073403_output.hdf'}\n",
     "\n",
-    "reference_data = {'MOD02HKM': 'reference_data/MOD02HKM.A2023309.2305.061.2023310073403_ref.hdf'}"
+    "reference_data = {\n",
+    "    'MOD02HKM': 'reference_data/MOD02HKM.A2023309.2305.061.2023310073403_ref.hdf'\n",
+    "}"
    ]
   },
   {
@@ -140,12 +150,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod02hkm_subsetbandname_env = {Environment.LOCAL: mod02hkm_non_production_info,\n",
-    "                       Environment.UAT: mod02hkm_non_production_info,\n",
-    "                       Environment.SIT: mod02hkm_non_production_info}\n",
+    "mod02hkm_subsetbandname_env = {\n",
+    "    Environment.LOCAL: mod02hkm_non_production_info,\n",
+    "    Environment.UAT: mod02hkm_non_production_info,\n",
+    "    Environment.SIT: mod02hkm_non_production_info,\n",
+    "}\n",
     "\n",
     "if harmony_environment in mod02hkm_subsetbandname_env:\n",
-    "    mod02hkm_subsetbandname_info =  mod02hkm_subsetbandname_env[harmony_environment]\n",
+    "    mod02hkm_subsetbandname_info = mod02hkm_subsetbandname_env[harmony_environment]\n",
     "else:\n",
     "    mod02hkm_subsetbandname_info = None"
    ]
@@ -167,16 +179,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (mod02hkm_subsetbandname_info is not None):\n",
+    "if mod02hkm_subsetbandname_info is not None:\n",
     "\n",
-    "    mod02hkm_request = Request(collection=mod02hkm_subsetbandname_info['collection'],\n",
-    "                               granule_id=mod02hkm_subsetbandname_info['granule_id'],\n",
-    "                               variables=mod02hkm_subsetbandname_info['variable'])\n",
+    "    mod02hkm_request = Request(\n",
+    "        collection=mod02hkm_subsetbandname_info['collection'],\n",
+    "        granule_id=mod02hkm_subsetbandname_info['granule_id'],\n",
+    "        variables=mod02hkm_subsetbandname_info['variable'],\n",
+    "    )\n",
     "\n",
-    "    mod02hkm_compare_file = submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
+    "    mod02hkm_compare_file = submit_and_download(\n",
+    "        harmony_client, mod02hkm_request, file_indicators['MOD02HKM']\n",
+    "    )\n",
     "\n",
     "    mod02hkm_test = True\n",
-    "    \n",
+    "\n",
     "    if not compare_data(reference_data['MOD02HKM'], mod02hkm_compare_file):\n",
     "        print_error('MOD02HKM data mismatch.')\n",
     "        mod02hkm_test = False\n",
@@ -189,9 +205,11 @@
     "        print_success('Subset-Band-Name test suite PASSED.')\n",
     "    else:\n",
     "        raise Exception('Subset-Band-Name test suite FAILED')\n",
-    "        \n",
+    "\n",
     "else:\n",
-    "    print(f'Subset-Band-Name is not configured for this environment: \"{harmony_environment}\" - skipping test.')"
+    "    print(\n",
+    "        f'Subset-Band-Name is not configured for this environment: \"{harmony_environment}\" - skipping test.'\n",
+    "    )"
    ]
   }
  ],
