--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc20331c-0f04-4d38-8a38-96431fde6088",
+   "id": "6b57af2f-0eef-4f4b-8699-4c0159c3fece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,10 +220,107 @@
     "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
     "        },\n",
     "    },\n",
-    "}\n",
-    "\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34aa51c3-39d7-46c8-ade2-4ae771452798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "production_configuration = {\n",
+    "    'subset_bounding_box': {\n",
+    "        'ATL03': {\n",
+    "            'collection_concept_id': Collection(id='C1256407609-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1262402516-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-105.5, 40.0, -105.0, 40.005),\n",
+    "        },\n",
+    "        'ATL07': {\n",
+    "            'collection_concept_id': Collection(id='C1256535488-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261684946-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-112.0, 80.0, -93.0, 80.3),\n",
+    "        },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1260745539-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
+    "        },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
+    "        },\n",
+    "        'ATL12': {\n",
+    "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1263137424-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
+    "        },\n",
+    "        'ATL13': {\n",
+    "            'collection_concept_id': Collection(id='C1257810199-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681705-NSIDC_CUAT',\n",
+    "            'spatial': BBox(-89.0, 43.0, -75.0, 45.0),\n",
+    "        },\n",
+    "    },\n",
+    "    'subset_by_temporal_range': {\n",
+    "        'ATL04': {\n",
+    "            'collection_concept_id': Collection(id='C1256535558-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1256952662-NSIDC_CUAT',\n",
+    "            'temporal': {\n",
+    "                'start': datetime.fromisoformat(\"2020-04-08T08:00:00.000Z\"),\n",
+    "                'stop': datetime.fromisoformat(\"2020-04-08T08:05:00.000Z\"),\n",
+    "            },\n",
+    "            'coords_to_rename': ['delta_time'],\n",
+    "        },\n",
+    "        # BLOCKED by https://bugs.earthdata.nasa.gov/browse/DAS-2233\n",
+    "        # 'ATL08': {\n",
+    "        #     'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "        #     'granule_id': 'G1261385533-NSIDC_CUAT',\n",
+    "        #     'temporal': {\n",
+    "        #         'start': datetime.fromisoformat(\"2022-07-31T23:01:00.000Z\"),\n",
+    "        #         'stop': datetime.fromisoformat(\"2022-07-31T23:01:10.000Z\"),\n",
+    "        #     },\n",
+    "        #     'coords_to_rename': [],\n",
+    "        # },\n",
+    "    },\n",
+    "    'subset_by_shapefile': {\n",
+    "        'ATL06': {\n",
+    "            'collection_concept_id': Collection(id='C1256358217-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1260779121-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/Iceland_sliver.zip',\n",
+    "        },\n",
+    "        'ATL08': {\n",
+    "            'collection_concept_id': Collection(id='C1256432189-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1260498664-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/SriLanka_simple.kml',\n",
+    "        },\n",
+    "        'ATL09': {\n",
+    "            'collection_concept_id': Collection(id='C1256563776-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1262106425-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
+    "        },\n",
+    "        'ATL10': {\n",
+    "            'collection_concept_id': Collection(id='C1256535487-NSIDC_CUAT'),\n",
+    "            'granule_id': 'G1261681735-NSIDC_CUAT',\n",
+    "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
+    "        },\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bcb56c0-f6f6-411a-9bfd-3f867bfe235a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "environment_configuration = {\n",
+    "    'https://harmony.earthdata.nasa.gov': {\n",
+    "        **production_configuration,\n",
+    "        'env': Environment.PROD,\n",
+    "    },\n",
     "    'https://harmony.uat.earthdata.nasa.gov': {\n",
     "        **non_production_configuration,\n",
     "        'env': Environment.UAT,\n",
