DAS-2214: Update the compare_results_to_reference_file_new to take an identical flag.
This flag will toggle between doing identical and equal comparisons for
datatrees.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -383,7 +383,9 @@
     "            assert exists(\n",
     "                test_output\n",
     "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file_new(test_output, test_reference)\n",
+    "            compare_results_to_reference_file_new(\n",
+    "                test_output, test_reference, identical=False\n",
+    "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
     "        print_success(f'{test_name} test suite.')\n",
@@ -436,7 +438,10 @@
     "                test_output\n",
     "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
     "            compare_results_to_reference_file_new(\n",
-    "                test_output, test_reference, test_config['coords_to_rename']\n",
+    "                test_output,\n",
+    "                test_reference,\n",
+    "                identical=false,\n",
+    "                coordinates_to_fix=test_config['coords_to_rename'],\n",
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
@@ -489,7 +494,9 @@
     "            assert exists(\n",
     "                test_output\n",
     "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file_new(test_output, test_reference, [])\n",
+    "            compare_results_to_reference_file_new(\n",
+    "                test_output, test_reference, identical=False, coordinates_to_fix=[]\n",
+    "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
     "        print_success(f'{test_name} test suite.')\n",
