DAS-2214: update changelog

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -440,7 +440,7 @@
     "            compare_results_to_reference_file_new(\n",
     "                test_output,\n",
     "                test_reference,\n",
-    "                identical=false,\n",
+    "                identical=False,\n",
     "                coordinates_to_fix=test_config['coords_to_rename'],\n",
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
