DAS-2214: Current PROD working config with notes in comments

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34aa51c3-39d7-46c8-ade2-4ae771452798",
+   "id": "7977dccf-9568-43ea-97c1-f8dc1bb93e6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,16 +247,18 @@
     "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
-    "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
-    "            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
-    "        },\n",
-    "        'ATL12': {\n",
-    "            'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2952679712-NSIDC_CPRD',\n",
-    "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
-    "        },\n",
+    "        # Needs Configuration\n",
+    "        #        'ATL10': {\n",
+    "        #            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
+    "        #            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "        #            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
+    "        #        },\n",
+    "        # New Version\n",
+    "        # 'ATL12': {\n",
+    "        #     'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
+    "        #     'granule_id': 'G2952685768-NSIDC_CPRD',\n",
+    "        #     'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
+    "        # },\n",
     "        'ATL13': {\n",
     "            'collection_concept_id': Collection(id='C2684928243-NSIDC_CPRD'),\n",
     "            'granule_id': 'G2720556827-NSIDC_CPRD',\n",
@@ -300,11 +302,12 @@
     "            'granule_id': 'G2666419430-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
     "        },\n",
-    "        'ATL10': {\n",
-    "            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
-    "            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
-    "            'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
-    "        },\n",
+    "        # Needs Configuration\n",
+    "        # 'ATL10': {\n",
+    "        #     'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
+    "        #     'granule_id': 'G2738637140-NSIDC_CPRD',\n",
+    "        #     'shape': 'ancillary/Ross_Sea_positive_lon_only.geojson',\n",
+    "        # },\n",
     "    },\n",
     "}"
    ]
@@ -505,14 +508,6 @@
     "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
     "        )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf49d848-f90e-46e5-b13f-5f7d1eaf9e1c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
