DAS-2214: Update ATL12 granule name

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -168,7 +168,7 @@
     "        },\n",
     "        'ATL12': {\n",
     "            'collection_concept_id': Collection(id='C1256476536-NSIDC_CUAT'),\n",
-    "            'granule_id': 'G1263137424-NSIDC_CUAT',\n",
+    "            'granule_id': 'G1263992202-NSIDC_CUAT',\n",
     "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
     "        },\n",
     "        'ATL13': {\n",
@@ -247,18 +247,17 @@
     "            'granule_id': 'G2645102344-NSIDC_CPRD',\n",
     "            'spatial': BBox(-105.5, 40.0, -105.0, 40.25),\n",
     "        },\n",
-    "        # Needs Configuration\n",
+    "        # Blocked by DAS-2244: and PROD need UMM-S configuration\n",
     "        #        'ATL10': {\n",
     "        #            'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
     "        #            'granule_id': 'G2738637140-NSIDC_CPRD',\n",
     "        #            'spatial': BBox(161.0, -75.0, 171.0, -74.0),\n",
     "        #        },\n",
-    "        # New Version\n",
-    "        # 'ATL12': {\n",
-    "        #     'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
-    "        #     'granule_id': 'G2952685768-NSIDC_CPRD',\n",
-    "        #     'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
-    "        # },\n",
+    "        'ATL12': {\n",
+    "            'collection_concept_id': Collection(id='C2613553216-NSIDC_CPRD'),\n",
+    "            'granule_id': 'G2952685768-NSIDC_CPRD',\n",
+    "            'spatial': BBox(-79.0, 27.0, -77.0, 34.0),\n",
+    "        },\n",
     "        'ATL13': {\n",
     "            'collection_concept_id': Collection(id='C2684928243-NSIDC_CPRD'),\n",
     "            'granule_id': 'G2720556827-NSIDC_CPRD',\n",
@@ -302,7 +301,7 @@
     "            'granule_id': 'G2666419430-NSIDC_CPRD',\n",
     "            'shape': 'ancillary/Tasmania_sliver.geojson',\n",
     "        },\n",
-    "        # Needs Configuration\n",
+    "        # Blocked by DAS-2244: and PROD need UMM-S configuration\n",
     "        # 'ATL10': {\n",
     "        #     'collection_concept_id': Collection(id='C2613553243-NSIDC_CPRD'),\n",
     "        #     'granule_id': 'G2738637140-NSIDC_CPRD',\n",
