pre-commit - Apply automatic fixes and determine correct unsafe fixes.

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -75,9 +75,7 @@
     "from pathlib import Path\n",
     "from tempfile import TemporaryDirectory\n",
     "\n",
-    "from harmony import BBox, Collection, Environment, Client, Request\n",
-    "from numpy.testing import assert_array_almost_equal\n",
-    "import rasterio\n",
+    "from harmony import Collection, Environment, Client, Request\n",
     "from rasterio.transform import Affine\n",
     "from rasterio.crs import CRS\n",
     "\n",
@@ -225,9 +223,7 @@
     "\n",
     "        test_files = build_file_list(aster_basename, Path(temp_dir), 'PNG')\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
@@ -290,9 +286,7 @@
     "\n",
     "        test_files = build_file_list(aster_basename, Path(temp_dir), 'JPEG')\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
@@ -468,9 +462,7 @@
     "\n",
     "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
@@ -528,9 +520,7 @@
     "\n",
     "        test_files = build_file_list(measures_basename, Path(temp_dir), 'JPG')\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
@@ -600,9 +590,7 @@
     "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
@@ -670,9 +658,7 @@
     "        test_files = build_file_list(measures_basename, Path(temp_dir), 'PNG')\n",
     "\n",
     "        for file_name in test_files:\n",
-    "            assert (\n",
-    "                file_name.exists() == True\n",
-    "            ), f'File does not exist {file_name.resolve()}'\n",
+    "            assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "        print_success('all test files generated')\n",
     "\n",
@@ -827,9 +813,7 @@
     "            tile_test_files = build_file_list(tile_basename, Path(temp_dir), 'PNG')\n",
     "\n",
     "            for file_name in tile_test_files:\n",
-    "                assert (\n",
-    "                    file_name.exists() == True\n",
-    "                ), f'File does not exist {file_name.resolve()}'\n",
+    "                assert file_name.exists(), f'File does not exist {file_name.resolve()}'\n",
     "\n",
     "            print_success(f'All {tile_basename} test files generated')\n",
     "            assert_dataset_produced_correct_results(\n",
@@ -859,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
