--- a/test/net2cog/net2cog_Regression.ipynb
+++ b/test/net2cog/net2cog_Regression.ipynb
@@ -73,10 +73,8 @@
     "from pathlib import Path\n",
     "from tempfile import TemporaryDirectory\n",
     "\n",
-    "from harmony import BBox, Collection, Environment, Client, Request\n",
+    "from harmony import Collection, Environment, Client, Request\n",
     "from harmony.harmony import ProcessingFailedException\n",
-    "from numpy.testing import assert_array_almost_equal\n",
-    "import rasterio\n",
     "from rasterio.transform import Affine\n",
     "from rasterio.crs import CRS\n",
     "\n",
