--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from harmony import BBox, Client, Collection, Dimension, Environment, Request\n",
+    "from harmony import BBox, Client, Collection, Environment, Request\n",
     "from os.path import exists\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
@@ -122,7 +122,6 @@
     "\n",
     "sys.path.append('../shared_utils')\n",
     "from utilities import (\n",
-    "    print_error,\n",
     "    print_success,\n",
     "    submit_and_download,\n",
     "    compare_results_to_reference_file_new,\n",
@@ -393,7 +392,7 @@
     "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
-    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
   },
@@ -450,7 +449,7 @@
     "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
-    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
   },
@@ -504,7 +503,7 @@
     "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
-    "            f'Bounding box tests not configured for environment: {harmony_environment} - skipping tests'\n",
+    "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
   }
