--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -35,24 +35,25 @@
    "source": [
     "# harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'\n",
     "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'\n",
-    "# harmony_host_url = 'https://harmony.earthdata.nasa.gov'\n",
-    "\n",
-    "# Import libraries used throughout the notebook\n",
+    "# harmony_host_url = 'https://harmony.earthdata.nasa.gov'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from notebook_helpers import (\n",
     "    get,\n",
     "    post,\n",
     "    show,\n",
-    "    get_data_urls,\n",
     "    show_async,\n",
     "    show_async_condensed,\n",
-    "    show_shape,\n",
     "    print_async_status,\n",
-    "    check_bbox_subset,\n",
-    "    check_stac,\n",
     ")\n",
     "import json\n",
-    "import intake\n",
-    "import re"
+    "import intake"
    ]
   },
   {
@@ -579,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
