Fix from precommit

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -126,6 +126,12 @@
     "    'variable': ['Band_250M'],\n",
     "}\n",
     "\n",
+    "mod02hkm_production_info = {\n",
+    "    'collection': Collection(id='C1378577630-LAADS'),\n",
+    "    'granule_id': 'G2796405746-LAADS',\n",
+    "    'variable': ['Band_250M'],\n",
+    "}\n",
+    "\n",
     "file_indicators = {'MOD02HKM': 'MOD02HKM.A2023309.2305.061.2023310073403_output.hdf'}\n",
     "\n",
     "reference_data = {\n",
@@ -152,6 +158,7 @@
     "    Environment.LOCAL: mod02hkm_non_production_info,\n",
     "    Environment.UAT: mod02hkm_non_production_info,\n",
     "    Environment.SIT: mod02hkm_non_production_info,\n",
+    "    Environment.PROD: mod02hkm_production_info,\n",
     "}\n",
     "\n",
     "if harmony_environment in mod02hkm_subsetbandname_env:\n",
