DAS-2205 - Move try/except to tests, print test result report, and throw an error if a test fails.

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -123,6 +123,7 @@
     "sys.path.append('../shared_utils')\n",
     "from utilities import (\n",
     "    print_success,\n",
+    "    print_error,\n",
     "    submit_and_download,\n",
     "    compare_results_to_reference_file_new,\n",
     ")"
@@ -343,6 +344,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f543434-46c1-4d4a-a710-73f6983b6330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_results = {}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b115ba16-0d31-43b0-9f57-6a7061b7eeda",
    "metadata": {},
@@ -381,15 +392,20 @@
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file_new(\n",
-    "                test_output, test_reference, identical=False\n",
-    "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            try:\n",
+    "                assert exists(\n",
+    "                    test_output\n",
+    "                ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "                compare_results_to_reference_file_new(\n",
+    "                    test_output, test_reference, identical=False\n",
+    "                )\n",
+    "                print_success(f'{shortname} {test_name} test request.')\n",
+    "                test_results[f'{shortname}_{test_name}'] = True\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "            except AssertionError as exception:\n",
+    "                print_error(exception)\n",
+    "                test_results[f'{shortname}_{test_name}'] = False\n",
+    "\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -435,18 +451,23 @@
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file_new(\n",
-    "                test_output,\n",
-    "                test_reference,\n",
-    "                identical=False,\n",
-    "                coordinates_to_fix=test_config['coords_to_rename'],\n",
-    "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            try:\n",
+    "                assert exists(\n",
+    "                    test_output\n",
+    "                ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "                compare_results_to_reference_file_new(\n",
+    "                    test_output,\n",
+    "                    test_reference,\n",
+    "                    identical=False,\n",
+    "                    coordinates_to_fix=test_config['coords_to_rename'],\n",
+    "                )\n",
+    "                print_success(f'{shortname} {test_name} test request.')\n",
+    "                test_results[f'{shortname}_{test_name}'] = True\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "            except AssertionError as exception:\n",
+    "                print_error(exception)\n",
+    "                test_results[f'{shortname}_{test_name}'] = False\n",
+    "\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -492,20 +513,58 @@
     "\n",
     "            submit_and_download(harmony_client, test_request, test_output)\n",
     "\n",
-    "            assert exists(\n",
-    "                test_output\n",
-    "            ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
-    "            compare_results_to_reference_file_new(\n",
-    "                test_output, test_reference, identical=False, coordinates_to_fix=[]\n",
-    "            )\n",
-    "            print_success(f'{shortname} {test_name} test request.')\n",
+    "            try:\n",
+    "                assert exists(\n",
+    "                    test_output\n",
+    "                ), 'Unsuccessful Harmony Request: {shortname}: {test_name}'\n",
+    "                compare_results_to_reference_file_new(\n",
+    "                    test_output, test_reference, identical=False, coordinates_to_fix=[]\n",
+    "                )\n",
+    "                print_success(f'{shortname} {test_name} test request.')\n",
+    "                test_results[f'{shortname}_{test_name}'] = True\n",
     "\n",
-    "        print_success(f'{test_name} test suite.')\n",
+    "            except AssertionError as exception:\n",
+    "                print_error(exception)\n",
+    "                test_results[f'{shortname}_{test_name}'] = False\n",
+    "\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d23dbf63-619e-48eb-a552-0671a578793c",
+   "metadata": {},
+   "source": [
+    "## Test Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94f0cc8-1772-4abb-94dd-f8eea4ac70a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for test, result in test_results.items():\n",
+    "    if test_results[test]:\n",
+    "        print(f'Pass : {test}')\n",
+    "    else:\n",
+    "        print_error(f'Fail : {test}')\n",
+    "\n",
+    "if False in test_results.values():\n",
+    "    raise AssertionError('Regression test fails.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da71040f-f723-4c14-97d0-802c524441d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -524,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
