--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -389,6 +389,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -445,6 +446,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -498,6 +500,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
+    "        print_success(f'{shortname} {test_name} test request.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
