--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -389,7 +389,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "        print_success(f'{shortname} {test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -446,7 +446,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "        print_success(f'{shortname} {test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
@@ -500,7 +500,7 @@
     "            )\n",
     "            print_success(f'{shortname} {test_name} test request.')\n",
     "\n",
-    "        print_success(f'{shortname} {test_name} test suite.')\n",
+    "        print_success(f'{test_name} test suite.')\n",
     "    else:\n",
     "        print(\n",
     "            f'Bounding box tests not configured for environment: {configuration[\"env\"]} - skipping tests'\n",
