DAS-2267: Separate xarray dependencies in the shared_utils directory

--- a/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
+++ b/test/nsidc-icesat2/NSIDC-ICESAT2_Regression.ipynb
@@ -121,11 +121,8 @@
     "import sys\n",
     "\n",
     "sys.path.append('../shared_utils')\n",
-    "from utilities import (\n",
-    "    print_success,\n",
-    "    submit_and_download,\n",
-    "    compare_results_to_reference_file_new,\n",
-    ")"
+    "from utilities import print_success, submit_and_download\n",
+    "from compare import compare_results_to_reference_file_new"
    ]
   },
   {
