LDDS-265: Add shared_utils to subset-band-name service

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -27,13 +27,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Import shared utility routines:\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append('../shared_utils')\n",
+    "from utilities import (\n",
+    "    print_error,\n",
+    "    print_success,\n",
+    "    submit_and_download,\n",
+    ")\n",
+    "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
     "from utilities import (\n",
-    "    submit_and_download,\n",
     "    remove_results_files,\n",
-    "    print_error,\n",
-    "    print_success,\n",
     "    compare_data,\n",
     ")"
    ]
