Updated files from pre-commit check

--- a/test/subset-band-name/SubsetBandName_Regression.ipynb
+++ b/test/subset-band-name/SubsetBandName_Regression.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "from harmony import Client, Collection, Environment, Request\n",
     "\n",
-    "from utilities import (\n",
+    "from subset_band_name_utitlities import (\n",
     "    remove_results_files,\n",
     "    compare_data,\n",
     ")"
@@ -117,7 +117,10 @@
    "source": [
     "## Setting up Collection Environment Variables\n",
     "\n",
-    "The cell below sets up the Collection, Granule and other necessary variables for each tested dataset. The datasets provided are in the `UAT` environment."
+    "The cell below sets up the Collection, Granule and other necessary variables for each tested dataset. The datasets provided are in the `UAT` environment. There is currently one dataset for Level 1B.\n",
+    "\n",
+    "- Level 1B: MOD021KM\n",
+    "- Variable: EV_250_Aggr500_RefSB"
    ]
   },
   {
@@ -130,19 +133,19 @@
     "mod02hkm_non_production_info = {\n",
     "    'collection': Collection(id='C1260442414-LAADSCDUAT'),\n",
     "    'granule_id': 'G1261680941-LAADSCDUAT',\n",
-    "    'variable': ['Band_250M'],\n",
+    "    'variable': ['EV_250_Aggr500_RefSB'],\n",
     "}\n",
     "\n",
     "mod02hkm_production_info = {\n",
     "    'collection': Collection(id='C1378577630-LAADS'),\n",
     "    'granule_id': 'G2796405746-LAADS',\n",
-    "    'variable': ['Band_250M'],\n",
+    "    'variable': ['EV_250_Aggr500_RefSB'],\n",
     "}\n",
     "\n",
-    "file_indicators = {'MOD02HKM': 'MOD02HKM.A2023309.2305.061.2023310073403_output.hdf'}\n",
+    "file_indicators = {'MOD02HKM': 'MOD02HKM.EV_250_Aggr500_RefSB_output.hdf'}\n",
     "\n",
     "reference_data = {\n",
-    "    'MOD02HKM': 'reference_data/MOD02HKM.A2023309.2305.061.2023310073403_ref.hdf'\n",
+    "    'MOD02HKM': 'reference_data/MOD02HKM.A2023309.2305.061.pscs_001729112207.hdf'\n",
     "}"
    ]
   },
@@ -165,7 +168,7 @@
     "    Environment.LOCAL: mod02hkm_non_production_info,\n",
     "    Environment.UAT: mod02hkm_non_production_info,\n",
     "    Environment.SIT: mod02hkm_non_production_info,\n",
-    "    Environment.PROD: mod02hkm_production_info,\n",
+    "    # Environment.PROD: mod02hkm_production_info,\n",
     "}\n",
     "\n",
     "if harmony_environment in mod02hkm_subsetbandname_env:\n",
@@ -179,9 +182,8 @@
    "id": "4640dde7-36cc-4c98-881d-9cbe6ec63d14",
    "metadata": {},
    "source": [
-    "## Subset by Band Variable Tests\n",
-    "\n",
-    "In the cell below, subset by band variable is tested."
+    "## Variable Subsetting Test\n",
+    "In the cell below, variable subsetting is tested by subsetting EV_250_Aggr500_RefSB variable from the MOD02HKM granule. The results are then compared against the reference data file."
    ]
   },
   {
@@ -199,13 +201,11 @@
     "        variables=mod02hkm_subsetbandname_info['variable'],\n",
     "    )\n",
     "\n",
-    "    mod02hkm_compare_file = submit_and_download(\n",
-    "        harmony_client, mod02hkm_request, file_indicators['MOD02HKM']\n",
-    "    )\n",
+    "    submit_and_download(harmony_client, mod02hkm_request, file_indicators['MOD02HKM'])\n",
     "\n",
     "    mod02hkm_test = True\n",
     "\n",
-    "    if not compare_data(reference_data['MOD02HKM'], mod02hkm_compare_file):\n",
+    "    if not compare_data(reference_data['MOD02HKM'], file_indicators['MOD02HKM']):\n",
     "        print_error('MOD02HKM data mismatch.')\n",
     "        mod02hkm_test = False\n",
     "\n",
